fix aside alignment

--- a/modern_left.css
+++ b/modern_left.css
@@ -210,6 +210,7 @@ a[href^="#"]:after {
 .header-container .clearfix {
     margin-top: 28px;
     margin-bottom: 40px;
+    position: relative;
 }
 
 header .title {
@@ -237,9 +238,10 @@ header p {
 }
 
 header>.aside-container {
-    margin: 8px auto;
     text-align: center;
-    float: right;
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
 
 aside {
